# tiny_inference_engine

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  README.md  conanfile.py  scratchpad.cpp
ci/: build.yml
client/: CMakeLists.txt  Dockerfile  client_main.cpp  client_main_backup.cpp  conanfile.py
client/test/: CMakeLists.txt
cmake/: grpc_common.cmake  sanitizers.cmake
conan/: install.py  profile.py
conan/profiles/: clang14  gcc12
grpc_example/: CMakeLists.txt  conanfile.txt
grpc_example/src/: client.cpp  server.cpp
proto/: amd.proto  nvidia.proto  services.proto
scripts/: download_onnxruntime.py
server/: CMakeLists.txt  Dockerfile  conanfile.py  main.cpp  server_main.cpp  server_main_backup.cpp
server/backend/: backend.hpp  backend_interface.hpp  infer_request.hpp  infer_response.hpp  infer_respose.hpp  onnx_backend.cpp
server/backend/onnx/: onnx.cpp
server/backend/pytorch/: pytorch.cpp
server/engine/: config.hpp  engine.cpp  engine.hpp  engine_interface.hpp  parser.cpp  parser.hpp  run.cpp  run.hpp  server_interface.hpp  server_manager.hpp  shutdown.cpp
server/grpc_server/: grpc_server.cpp  grpc_server.hpp
server/http_server/: http_server.cpp  http_server.hpp
server/server/: grpc_server.cpp  grpc_server.hpp  http_server.cpp
server/test/: CMakeLists.txt
tiny_inference_client/: CMakeLists.txt
tiny_inference_client/client_core/: CMakeLists.txt  conanfile.py
tiny_inference_client/client_core/include/: client.hpp  client_core.hpp  infer_request.hpp
tiny_inference_client/client_core/src/: client.cpp  client_core.cpp  grpc_client.cpp  grpc_client.hpp
tiny_inference_client/core/: CMakeLists.txt
tiny_inference_client/examples/: CMakeLists.txt  conanfile.py  conanfile.txt
tiny_inference_client/examples/src/: client_example_model_infer.cpp  client_example_model_info.cpp  client_example_server_info.cpp  client_example_simple_inference.cpp
tiny_inference_client/tests/: CMakeLists.txt  conanfile.py
tiny_inference_client/tests/src/: engine_parser_test.cpp
tiny_inference_client/tie_client/: CMakeLists.txt  Dockerfile  conanfile.txt
tiny_inference_client/tie_client/include/tie_client/: call_result.hpp  client_factory.hpp  client_interface.hpp  data_type.hpp  infer_parameters.hpp  infer_request.hpp  infer_response.hpp  infer_tensor.hpp  model_metadata.hpp  server_metadata.hpp
tiny_inference_client/tie_client/src/: call_result.cpp  client_factory.cpp  client_rpc_unary_async.hpp  data_type.cpp  grpc_client.cpp  grpc_client.hpp  tensor_converter.cpp  tensor_converter.hpp
tiny_inference_engine/: CMakeLists.txt
tiny_inference_engine/examples/: CMakeLists.txt
tiny_inference_engine/examples/src/: server_backend_runner.cpp
tiny_inference_engine/tests/: CMakeLists.txt  conanfile.txt
tiny_inference_engine/tests/src/: main.cpp
tiny_inference_engine/tie_engine/: CMakeLists.txt  conanfile.txt
tiny_inference_engine/tie_engine/include/tie_engine/: backend_factory.hpp  backend_interface.hpp  backend_type.hpp  engine_factory.hpp  engine_interface.hpp  infer_request.hpp  infer_response.hpp  model_metadata.hpp
tiny_inference_engine/tie_engine/src/: backend_factory.cpp  engine.cpp  engine.hpp  engine_factory.cpp
tiny_inference_engine/tie_engine/src/null_backend/: null_backend.cpp  null_backend.hpp
tiny_inference_engine/tie_engine/src/onnx_backend/: onnx_backend.cpp  onnx_backend.hpp
tiny_inference_server/: CMakeLists.txt  Dockerfile
tiny_inference_server/core/: CMakeLists.txt  conanfile.py
tiny_inference_server/core/backend/: backend_interface.hpp  infer_request.hpp  onnx_backend.hpp
tiny_inference_server/core/engine/: engine_interface.hpp  run.cpp  server_manager.hpp  shutdown.cpp  shutdown.hpp
tiny_inference_server/core/engine/include/: run.hpp
tiny_inference_server/core/server/: http_server.hpp  server_interface.hpp
tiny_inference_server/examples/: CMakeLists.txt  conanfile.py
tiny_inference_server/examples/src/: server_backend_runner.cpp  server_example_runner.cpp
tiny_inference_server/scripts/: download_onnxruntime.py
tiny_inference_server/server/: CMakeLists.txt  main.cpp
tiny_inference_server/server_core/: CMakeLists.txt  conanfile.py
tiny_inference_server/server_core/backend/: backend_factory.cpp  backend_interface.hpp  null_backend.cpp  null_backend.hpp  onnx_backend.cpp  onnx_backend.hpp  pytorch_backend.cpp  pytorch_backend.hpp
tiny_inference_server/server_core/backend/include/: backend_factory.hpp  backend_interface.hpp  infer_request.hpp  infer_response.hpp
tiny_inference_server/server_core/engine/: config.hpp  engine.cpp  engine.hpp  engine_interface.hpp  parser.cpp  parser.hpp  run.cpp  server_manager.hpp  shutdown.cpp  shutdown.hpp
tiny_inference_server/server_core/engine/include/: run.hpp
tiny_inference_server/server_core/server/: grpc_server.cpp  grpc_server.hpp  http_server.cpp  http_server.hpp  server_interface.hpp  server_manager.cpp  server_manager.hpp
tiny_inference_server/tests/: CMakeLists.txt  conanfile.py
tiny_inference_server/tests/src/: engine_parser_test.cpp
tiny_inference_server/tie_server/: CMakeLists.txt  conanfile.txt
tiny_inference_server/tie_server/src/: command_line_parser.cpp  command_line_parser.hpp  grpc_server.cpp  grpc_server.hpp  http_server.cpp  http_server.hpp  logging.cpp  logging.hpp  main.cpp  server_config.hpp  server_interface.hpp  server_manager.cpp  server_manager.hpp  server_shutdown.cpp  server_shutdown.hpp  version.hpp  version.hpp.in
tiny_inference_server/tie_server/src/rpc/: rpc.hpp  rpc_io.hpp  rpc_model_infer.cpp  rpc_model_infer.hpp  rpc_model_list.cpp  rpc_model_list.hpp  rpc_model_load.cpp  rpc_model_load.hpp  rpc_model_metadata.cpp  rpc_model_metadata.hpp  rpc_model_ready.cpp  rpc_model_ready.hpp  rpc_model_unload.cpp  rpc_model_unload.hpp  rpc_pool.cpp  rpc_pool.hpp  rpc_server_live.cpp  rpc_server_live.hpp  rpc_server_metadata.cpp  rpc_server_metadata.hpp  rpc_server_ready.cpp  rpc_server_ready.hpp  rpc_unary_async.cpp  rpc_unary_async.hpp
